🥳It works with real data

--- a/locales/en/yourloops.json
+++ b/locales/en/yourloops.json
@@ -126,6 +126,8 @@
   "avg-time-loop-how-calculate": "**How we calculate this**:\n\n(%) is the duration in loop mode ON or OFF divided by the total duration of basals for this time period.\n\n**(time)** is the average daily time spent in loop mode ON or OFF.",
   "avg-time-loop-tooltip": "**Time In Loop Mode**: Daily average of the time spent in automated basal delivery.",
   "basal-and-correction-bolus": "Basal & correction bolus",
+  "basal-rate": "Basal rate",
+  "basal-rate-unit": "U/h",
   "below-range": "Below range",
   "below-range-tooltip": "Below range",
   "birthplace": "Birth place",
@@ -218,6 +220,7 @@
   "created-by-unknown": "Created by unknown user",
   "current": "Current",
   "current-monitoring-alerts": "Current monitoring alerts",
+  "current-parameters": "Current parameters",
   "current-trigger-setting-data": "Current trigger setting: {{nonDataThreshold}}% of data not transmitted over the period",
   "current-trigger-setting-hypoglycemia": "Current trigger setting: {{hypoThreshold}}% of time below {{veryLowBg}} {{bgUnit}} threshold",
   "current-trigger-setting-tir": "Current trigger setting: {{tir}}% of time off target (min at {{lowBg}} {{bgUnit}} max at {{highBg}} {{bgUnit}})",
@@ -248,6 +251,7 @@
   "device": "Device",
   "device-usage": "Device Usage",
   "devices": "Devices",
+  "devices-and-current-parameters": "Devices and current parameters",
   "diabetes-type": "Diabetes type",
   "diagnosis": "Diagnosis",
   "dialog-pdf-options-custom-range": "or a customized period",
@@ -258,6 +262,7 @@
   "edit-medical-report": "Edit medical report {{number}}",
   "email": "Email",
   "end-date": "End date",
+  "end-time": "End time",
   "error-caregiver-already-in-list": "You are already sharing your data with this caregiver.",
   "error-email-verification": "An error occurred during the process.",
   "error-http-40x": "An error occurred. Please contact support for assistance",
@@ -475,6 +480,9 @@
   "rescue-carbs-number": "Number of rescue carbs per day",
   "reservoir-empty": "Reservoir empty",
   "reset": "Reset",
+  "safety-basal-profile": "Safety basal profile",
+  "safety-basal-profile-values-not-available": "The safety basal profile values are not available.",
+  "safety-basal-profile-values-not-available-update-dblg1": "The safety basal profile values are not available due to an outdated software version of the DBLG1. Updating the software version may resolve the issue.",
   "security": "Security",
   "select-account-type": "Select account type",
   "send": "Send",
@@ -500,6 +508,7 @@
   "signup-unknown-step": "Unknown step",
   "standard-deviation": "Standard Deviation",
   "standard-deviation-tooltip": "**SD (Standard Deviation):** How far values are from the average.",
+  "start-time": "Start time",
   "switch-role-success": "Your account has been successfully switched to HCP account",
   "system": "System",
   "target-and-alerts": "Target & alerts",
