YLP-3300 Legend in "Rescue carbs & manual bolus intakes" table is not consistent with what is displayed

--- a/locales/de/yourloops.json
+++ b/locales/de/yourloops.json
@@ -330,7 +330,7 @@
   "mandatory-integer": "Wert muss eine ganze Zahl sein",
   "mandatory-range": "Zahl zwischen {{lowValue}} und {{highValue}} eingeben",
   "manual-pen-bolus": "Manuelle & Pen-Bolus",
-  "manual-bolus-number": "Ø tägliche Anz. manueller Boli",
+  "manual-bolus-number": "Anzahl der manuellen Boli und Pen-Boli",
   "manual-bolus": "Manueller Bolus",
   "manual-flag": "Manuelle Markierung",
   "maximum": "Maximum:",
@@ -472,7 +472,7 @@
   "remove-member-success": "Das Mitglied wurde erfolgreich aus dem Team entfernt.",
   "required-field": "Erforderlich",
   "rescue-carbs": "Notfall KH",
-  "rescue-carbs-number": "Ø tägliche Anzahl der Einnahme von Notfall-Kohlenhydraten ",
+  "rescue-carbs-number": "Anzahl der Rettungskohlenhydrate",
   "reservoir-empty": "Reservoir leer",
   "reset": "Zurücksetzen",
   "security": "Sicherheit",
