--- a/locales/en/yourloops.json
+++ b/locales/en/yourloops.json
@@ -330,7 +330,7 @@
   "mandatory-integer": "Value must be an integer",
   "mandatory-range": "Enter a number between {{lowValue}} and {{highValue}}",
   "manual-pen-bolus": "Manual and pen bolus",
-  "manual-bolus-number": "Number of manual & pen bolus per day",
+  "manual-bolus-number": "Number of manual & pen bolus",
   "manual-bolus": "Manual bolus",
   "manual-flag": "Manual flag",
   "maximum": "Maximum",
@@ -472,7 +472,7 @@
   "remove-member-success": "The member has successfully be removed from the team.",
   "required-field": "Required",
   "rescue-carbs": "Rescue carbs",
-  "rescue-carbs-number": "Number of rescue carbs per day",
+  "rescue-carbs-number": "Number of rescue carbs",
   "reservoir-empty": "Reservoir empty",
   "reset": "Reset",
   "security": "Security",
