--- a/locales/es/yourloops.json
+++ b/locales/es/yourloops.json
@@ -330,7 +330,7 @@
   "mandatory-integer": "El valor debe ser un número entero",
   "mandatory-range": "Introduzca un número entre {{lowValue}} y {{highValue}}",
   "manual-pen-bolus": "Bolos manuales y de pluma",
-  "manual-bolus-number": "N.º prom. de bolos manuales al día",
+  "manual-bolus-number": "Número de bolos manuales y con bolígrafo",
   "manual-bolus": "Bolo manual",
   "manual-flag": "Marca manual",
   "maximum": "Máximo",
@@ -472,7 +472,7 @@
   "remove-member-success": "Se eliminó correctamente al miembro del equipo.",
   "required-field": "Obligatorio",
   "rescue-carbs": "Carb. emergencia",
-  "rescue-carbs-number": "Prom. veces al día que se toman carbohidratos de emergencia ",
+  "rescue-carbs-number": "Número de carbohidratos de rescate",
   "reservoir-empty": "Reservorio vacío",
   "reset": "Restablecer",
   "security": "Seguridad",
