--- a/locales/fr/yourloops.json
+++ b/locales/fr/yourloops.json
@@ -330,7 +330,7 @@
   "mandatory-integer": "La valeur doit être un nombre entier",
   "mandatory-range": "Entrez un nombre entre {{lowValue}} et {{highValue}}",
   "manual-pen-bolus": "Bolus manuel et bolus stylo",
-  "manual-bolus-number": "Nb. moy. de bolus manuels par jour",
+  "manual-bolus-number": "Nombre de bolus manuels & stylo",
   "manual-bolus": "Bolus manuel",
   "manual-flag": "Marquage manuel",
   "maximum": "Maximum:",
@@ -472,7 +472,7 @@
   "remove-member-success": "Le membre a été retiré de l'équipe avec succès.",
   "required-field": "Requis",
   "rescue-carbs": "Resucrage",
-  "rescue-carbs-number": "Nb. moyen de resucrages par jour",
+  "rescue-carbs-number": "Nombre de resucrages",
   "reservoir-empty": "Réservoir vide",
   "reset": "Réinitialiser",
   "security": "Sécurité",
