--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -108,6 +108,7 @@
   "Meal Bolus": "Meal",
   "Median": "Median",
   "Meter": "Meter",
+  "Mobile application": "Mobile application",
   "N/A": "N/A",
   "Name": "Name",
   "New": "New",
@@ -115,11 +116,14 @@
   "No available data to display here, sorry!": "No available data to display here!",
   "No diabeloop device informations available": "No information available",
   "No diabeloop device parameters available": "No information available",
+  "Operating system": "Operating system",
   "Override": "Override",
   "Override up & down": "Override up and down",
+  "Sdk version": "Sdk version",
   "Page {{page}} of {{pageCount}}": "Page {{page}} of {{pageCount}}",
   "Parameter": "Setting",
   "Parameters History": "Settings History",
+  "Phone": "Phone",
   "Physical Activity": "Physical Activity",
   "Please choose a preferred site change source from the 'Basics' web view to view this data.": "Please choose a preferred site change source from the 'Basics' web view to view this data.",
   "Post_submit": "Post",
