--- a/locales/en/yourloops.json
+++ b/locales/en/yourloops.json
@@ -353,6 +353,7 @@
   "menu-contact-support": "Customer support",
   "messages": "Messages",
   "minimum": "Minimum",
+  "mobile-application": "Mobile application",
   "modal-add-caregiver": "Add a caregiver",
   "modal-add-patient": "Invite a patient to {{selectedCareTeam}}",
   "modal-add-patient-info": "To invite a patient to share their data with another care team, you must first select the care team in the dropdown menu at the top right of YourLoops.",
@@ -432,6 +433,7 @@
   "number-of-bolus": "Total number of bolus",
   "number-of-rescue-carbs": "Number of rescue carbs",
   "number-of-rescue-carbs-modified": "Number of rescue carbs modified",
+  "operating-system": "Operating system",
   "open-team-menu": "Open team menu",
   "open-team-selection-menu": "Open team selection menu",
   "optional": "Optional",
@@ -449,6 +451,7 @@
   "pending-invite": "Pending invite",
   "personal-information": "Personal Information",
   "personal-settings": "Personal settings",
+  "phone": "Phone",
   "phone-number": "Phone number",
   "preferences": "Preferences",
   "preset-dates-range-1week": "1 week",
@@ -484,6 +487,7 @@
   "safety-basal-profile-values-not-available": "The safety basal profile values are not available.",
   "safety-basal-profile-values-not-available-update-dblg1": "The safety basal profile values are not available due to an outdated software version of the DBLG1. Updating the software version may resolve the issue.",
   "security": "Security",
+  "sdk-version": "Sdk version",
   "select-account-type": "Select account type",
   "send": "Send",
   "sensor-usage": "Sensor Usage",
