YLP-2821 as-a-DBLG2-user-i-want-to-be-able-to-see-the-device-tab (#1765)
* feature: add new info table called mobile application
* minor feedback from PO
* implement print mobile app section
* implement integration testing
* implement copy text for settings
* fix build (1)
* fix build (2)
* fix: missing mobile app table in pdf
* fix: device table in pdf
* fix: test locales
* fix: mobile card for g2 should not be present
* fix: regression on pdf, the time in loop mode ratio was broken
* PO feedbacks
* fix: sonarqube feedbacks
* update changelog
* PR feedbacks

--- a/locales/en/yourloops.json
+++ b/locales/en/yourloops.json
@@ -353,6 +353,7 @@
   "menu-contact-support": "Customer support",
   "messages": "Messages",
   "minimum": "Minimum",
+  "mobile-application": "Mobile application",
   "modal-add-caregiver": "Add a caregiver",
   "modal-add-patient": "Invite a patient to {{selectedCareTeam}}",
   "modal-add-patient-info": "To invite a patient to share their data with another care team, you must first select the care team in the dropdown menu at the top right of YourLoops.",
