YLP-3332 Rename "Pump settings" page of PDF export to "Settings"

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -128,7 +128,6 @@
   "Product": "Product",
   "Profile": "Profile",
   "Pump": "Pump",
-  "Pump Settings": "Pump Settings",
   "Pump version": "Pump version",
   "Readings Above Range": "Readings Above Range",
   "Readings Below Range": "Readings Below Range",
@@ -240,6 +239,7 @@
   "pdf-footer-center-text": "Diabeloop - {{appURL}}",
   "scheduled": "scheduled",
   "seconds": "seconds",
+  "settings": "Settings",
   "to": "to",
   "unknown": "unknown",
   "week": "week",
