Update English translations

--- a/locales/en/yourloops.json
+++ b/locales/en/yourloops.json
@@ -220,7 +220,7 @@
   "created-by-unknown": "Created by unknown user",
   "current": "Current",
   "current-monitoring-alerts": "Current monitoring alerts",
-  "current-parameters": "Current parameters",
+  "current-parameters": "Current settings",
   "current-trigger-setting-data": "Current trigger setting: {{nonDataThreshold}}% of data not transmitted over the period",
   "current-trigger-setting-hypoglycemia": "Current trigger setting: {{hypoThreshold}}% of time below {{veryLowBg}} {{bgUnit}} threshold",
   "current-trigger-setting-tir": "Current trigger setting: {{tir}}% of time off target (min at {{lowBg}} {{bgUnit}} max at {{highBg}} {{bgUnit}})",
@@ -251,7 +251,7 @@
   "device": "Device",
   "device-usage": "Device Usage",
   "devices": "Devices",
-  "devices-and-current-parameters": "Devices and current parameters",
+  "devices-and-current-parameters": "Devices and current settings",
   "diabetes-type": "Diabetes type",
   "diagnosis": "Diagnosis",
   "dialog-pdf-options-custom-range": "or a customized period",
