Fixed English translations

--- a/locales/en/yourloops.json
+++ b/locales/en/yourloops.json
@@ -481,9 +481,9 @@
   "rescue-carbs-number": "Number of rescue carbs",
   "reservoir-empty": "Reservoir empty",
   "reset": "Reset",
-  "safety-basal-profile": "Safety basal profile",
-  "safety-basal-profile-values-not-available": "The safety basal profile values are not available.",
-  "safety-basal-profile-values-not-available-update-dblg1": "The safety basal profile values are not available due to an outdated software version of the DBLG1. Updating the software version may resolve the issue.",
+  "safety-basal-profile": "Basal safety profile",
+  "safety-basal-profile-values-not-available": "The basal safety profile values are not available.",
+  "safety-basal-profile-values-not-available-update-dblg1": "The basal safety profile values are not available due to an outdated software version of the DBLG1. Updating the software version may resolve the issue.",
   "security": "Security",
   "select-account-type": "Select account type",
   "send": "Send",
