YLP-3151 Display Night mode events in Daily view

--- a/locales/en/yourloops.json
+++ b/locales/en/yourloops.json
@@ -414,6 +414,7 @@
   "my-private-practice": "My private practice",
   "new-message": "New",
   "new-unread-messages": "The patient has sent you new messages",
+  "night-mode": "Night mode",
   "no": "No",
   "no-insulin-left-in-reservoir": "There is no insulin left in the reservoir.",
   "no-medical-files-hcp": "No medical files have yet been created.",
