YLP-3486 Add physical activity name in tooltip

--- a/locales/es/parameter.json
+++ b/locales/es/parameter.json
@@ -1,21 +1,38 @@
 {
+  "AEROBIC_DEFAULT": "Sport",
   "AFTER_MEAL_FORCE_MD_DURATION": "Duración de la inhibición postcomida",
   "AFTER_MEAL_INHIB_DURATION": "",
+  "AMERICAN_FOOTBALL": "American football",
+  "ANAEROBIC": "Sport – anaerobic",
+  "BADMINTON": "Badminton",
   "BASAL_RATIO": "Bolo máximo",
+  "BASEBALL": "Baseball",
+  "BASKET_BALL": "Basket-ball",
   "BOLUS_AGGRESSIVENESS_FACTOR": "Agresividad en hiperglucemia",
   "BOLUS_MAX": "",
   "COB_DURATION": "",
   "COB_TAU_GLY": "",
+  "COMBAT": "Combat sport",
   "COMPENSATION_FACTOR": "Factor de corrección",
+  "CONSTRUCTION_WORK": "Construction work",
   "CR_GLY_A": "Factor de corrección adaptativo",
   "CR_GLY_FACTOR_HIGH": "Factor de corrección adaptativo alto",
   "CR_GLY_FACTOR_LOW": "Factor de corrección adaptativo bajo",
+  "CYCLING": "Cycling",
+  "DANCING": "Dancing",
+  "GOLF": "Golf",
+  "GYMNASTICS": "Gymnastics",
+  "HANDBALL": "Handball",
   "HEIGHT": "Estatura",
+  "HIKING": "Hiking",
+  "HOCKEY": "Hockey",
+  "HOUSEHOLD_CHORES": "Household chores",
   "HYPO_FAR_FORWARD_PRED_DURATION": "Predicción a largo plazo de hipoglucemia",
   "IOB_REAL_MIN_LEVEL": "Nivel mínimo del factor IOB",
   "IOB_REAL_SECU_FACTOR": "Factor de seguridad IOB",
   "IOB_RISK_ACTIVE": "Minimizador de hipoglucemias de activación de riesgo IOB",
   "IOB_TAU_S": "Velocidad de acción de la insulina",
+  "JUDO": "Judo",
   "KP_COEFF": "Agresividad tras las comidas",
   "LARGE_MEAL_BREAKFAST": "Desayuno - abundante",
   "LARGE_MEAL_DINNER": "Cena - abundante",
@@ -34,9 +51,12 @@
   "MEDIUM_MEAL_BREAKFAST": "Desayuno - mediano",
   "MEDIUM_MEAL_DINNER": "Cena - mediana",
   "MEDIUM_MEAL_LUNCH": "Comida - mediana",
+  "MIXED": "Sport – mixed",
   "MODEL_MISMATCH_THRESHOLD": "",
+  "MOTORSPORT": "Motorsport",
   "NIGHT_MODEL_MISMATCH_THRESHOLD": "",
   "NIGHT_TARGET_MAJORATION_OFFSET": "Aumento ideal durante la noche",
+  "NORDIC_SKIING": "Nordic skiing",
   "OFFSET_TARGET_BOLUS_MD": "",
   "OFFSET_TARGET_BOLUS_MD_POST_SUGARING": "Compensación en el nivel ideal de glucemia tras la ingesta de carbohidratos de emergencia",
   "OFFSET_TARGET_BOLUS_MD_POST_SUGARING_DURATION": "",
@@ -47,16 +67,29 @@
   "PMM_ACTIVE": "",
   "PMM_MEAL_BOLUS_FRACTION": "Predictibilidad de la velocidad de digestión",
   "PREDICTION_OFFSET_DURATION": "",
+  "ROWING": "Rowing",
+  "RUGBY": "Rugby",
+  "RUNNING": "Running",
+  "SKATING": "Skating",
+  "SKIING": "Skiing",
   "SLOPE_THRESH_ALGO_MD": "",
   "SMALL_MEAL_BREAKFAST": "Desayuno - ligero",
   "SMALL_MEAL_DINNER": "Cena - ligera",
   "SMALL_MEAL_LUNCH": "Comida - ligera",
   "SNACK_INHIBITION_DURATION": "",
   "SNACK_INHIBITION_DURATION_PA": "",
+  "SOCCER": "Soccer",
+  "SQUASH": "Squash",
   "SUGARING_RATIO": "",
+  "SWIMMING": "Swimming",
+  "TENNIS": "Tennis",
   "TOTAL_INSULIN_DOSE_1H": "Dosis basal horaria máxima",
   "TOTAL_INSULIN_FOR_24H": "Total diario de insulina",
+  "VOLLEY_BALL": "Volley-ball",
+  "WALKING": "Walking",
   "WEIGHT": "Peso",
+  "WEIGHTLIFTING": "Weightlifting",
+  "WRESTLING": "Wrestling",
   "ZEN_MODE_DURATION": "",
   "ZEN_MODE_GLYCEMIA_TARGET_OFFSET": ""
 }
