--- a/locales/de/parameter.json
+++ b/locales/de/parameter.json
@@ -1,21 +1,38 @@
 {
+  "AEROBIC_DEFAULT": "Sport",
   "AFTER_MEAL_FORCE_MD_DURATION": "Wirkungsdauer der Entscheidungsmatrix nach Mahlzeiten",
   "AFTER_MEAL_INHIB_DURATION": "Dauer der Mahlzeitenhemmung",
+  "AMERICAN_FOOTBALL": "American Football",
+  "ANAEROBIC": "Sport – Anaerob",
+  "BADMINTON": "Badminton",
   "BASAL_RATIO": "",
+  "BASEBALL": "Baseball",
+  "BASKET_BALL": "Basketball",
   "BOLUS_AGGRESSIVENESS_FACTOR": "Aggressivität bei Hyperglykämie",
   "BOLUS_MAX": "Maximaler Bolus",
   "COB_DURATION": "Dauer der KOB",
   "COB_TAU_GLY": "",
+  "COMBAT": "Kampfsport",
   "COMPENSATION_FACTOR": "Korrekturfaktor",
+  "CONSTRUCTION_WORK": "Bauarbeiten",
   "CR_GLY_A": "Anpassbarer Korrekturfaktor",
   "CR_GLY_FACTOR_HIGH": "",
   "CR_GLY_FACTOR_LOW": "",
+  "CYCLING": "Fahrradfahren",
+  "DANCING": "Tanzen",
+  "GOLF": "Golf",
+  "GYMNASTICS": "Gymnastik",
+  "HANDBALL": "Handball",
   "HEIGHT": "Größe",
+  "HIKING": "Wandern",
+  "HOCKEY": "Hockey",
+  "HOUSEHOLD_CHORES": "Hausarbeit",
   "HYPO_FAR_FORWARD_PRED_DURATION": "Dauer für die Vorhersage einer Hypoglykämie",
   "IOB_REAL_MIN_LEVEL": "Minimaler IOB-Faktor",
   "IOB_REAL_SECU_FACTOR": "Sicherheitsfaktor IOB",
   "IOB_RISK_ACTIVE": "Hypominimizer IOB-Risiko Aktivierung",
   "IOB_TAU_S": "Insulinwirkgeschwindigkeit",
+  "JUDO": "Judo",
   "KP_COEFF": "Aggressivität nach einer Mahlzeit",
   "LARGE_MEAL_BREAKFAST": "Frühstück - Groß",
   "LARGE_MEAL_DINNER": "Abendessen - Groß",
@@ -34,9 +51,12 @@
   "MEDIUM_MEAL_BREAKFAST": "Frühstück - Mittel",
   "MEDIUM_MEAL_DINNER": "Abendessen - Mittel",
   "MEDIUM_MEAL_LUNCH": "Mittagessen - Mittel",
+  "MIXED": "Sport – Gemischt",
   "MODEL_MISMATCH_THRESHOLD": "",
+  "MOTORSPORT": "Motorsport",
   "NIGHT_MODEL_MISMATCH_THRESHOLD": "",
   "NIGHT_TARGET_MAJORATION_OFFSET": "Zielwert-Erhöhung über Nacht",
+  "NORDIC_SKIING": "Skilanglauf",
   "OFFSET_TARGET_BOLUS_MD": "",
   "OFFSET_TARGET_BOLUS_MD_POST_SUGARING": "Verschiebung des Glukose-Zielwertes nach Einnahme der Notfall-KH",
   "OFFSET_TARGET_BOLUS_MD_POST_SUGARING_DURATION": "Dauer der Verschiebung des Glukose-Zielwertes nach Einnahme der Notfall-KH",
@@ -47,16 +67,29 @@
   "PMM_ACTIVE": "",
   "PMM_MEAL_BOLUS_FRACTION": "Vorhersagbarkeit der Verdauungsgeschwindigkeit",
   "PREDICTION_OFFSET_DURATION": "",
+  "ROWING": "Rudern",
+  "RUGBY": "Rugby",
+  "RUNNING": "Joggen",
+  "SKATING": "Skaten",
+  "SKIING": "Skifahren",
   "SLOPE_THRESH_ALGO_MD": "",
   "SMALL_MEAL_BREAKFAST": "Frühstück- Klein",
   "SMALL_MEAL_DINNER": "Abendessen - Klein",
   "SMALL_MEAL_LUNCH": "Mittagessen - Klein",
   "SNACK_INHIBITION_DURATION": "Dauer der Hemmung nach Einnahme von Notfall-Kohlenhydraten",
   "SNACK_INHIBITION_DURATION_PA": "",
+  "SOCCER": "Fußball",
+  "SQUASH": "Squash",
   "SUGARING_RATIO": "Notfall-Kohlenhydrate Faktor",
+  "SWIMMING": "Schwimmen",
+  "TENNIS": "Tennis",
   "TOTAL_INSULIN_DOSE_1H": "Maximale Basalrate pro Stunde",
   "TOTAL_INSULIN_FOR_24H": "Tages-Gesamt-Insulindosis",
+  "VOLLEY_BALL": "Volleyball",
+  "WALKING": "Spazierengehen",
   "WEIGHT": "Körpergewicht",
+  "WEIGHTLIFTING": "Weightlifting",
+  "WRESTLING": "Wrestling",
   "ZEN_MODE_DURATION": "Dauer",
   "ZEN_MODE_GLYCEMIA_TARGET_OFFSET": "Verschiebung zum Glukose-Zielwert"
 }
