--- a/locales/fr/parameter.json
+++ b/locales/fr/parameter.json
@@ -1,21 +1,38 @@
 {
+  "AEROBIC_DEFAULT": "Sport",
   "AFTER_MEAL_FORCE_MD_DURATION": "Durée en MD après un repas",
   "AFTER_MEAL_INHIB_DURATION": "Durée d'inhibition des repas",
+  "AMERICAN_FOOTBALL": "Football américain",
+  "ANAEROBIC": "Sport - Anaérobie",
+  "BADMINTON": "Badminton",
   "BASAL_RATIO": "",
+  "BASEBALL": "Baseball",
+  "BASKET_BALL": "Basket",
   "BOLUS_AGGRESSIVENESS_FACTOR": "Réactivité en hyperglycémie",
   "BOLUS_MAX": "Bolus max",
   "COB_DURATION": "Durée de COB",
   "COB_TAU_GLY": "COB TAU GLY",
+  "COMBAT": "Sport de combat",
   "COMPENSATION_FACTOR": "Facteur de compensation",
+  "CONSTRUCTION_WORK": "Travaux de construction",
   "CR_GLY_A": "Facteur de compensation adaptatif",
   "CR_GLY_FACTOR_HIGH": "Facteur de compensation adaptatif haut",
   "CR_GLY_FACTOR_LOW": "Facteur de compensation adaptatif bas",
+  "CYCLING": "Vélo",
+  "DANCING": "Danse",
+  "GOLF": "Golf",
+  "GYMNASTICS": "Gymnastique",
+  "HANDBALL": "Handball",
   "HEIGHT": "Taille",
+  "HIKING": "Randonnée",
+  "HOCKEY": "Hockey",
+  "HOUSEHOLD_CHORES": "Tâches ménagères",
   "HYPO_FAR_FORWARD_PRED_DURATION": "Prédiction hypo à long terme",
   "IOB_REAL_MIN_LEVEL": "Facteur de niveau minimum IOB",
   "IOB_REAL_SECU_FACTOR": "Facteur de sécurité IOB",
   "IOB_RISK_ACTIVE": "Hypominimizer IOB risk activation",
   "IOB_TAU_S": "Vitesse d’action de l’insuline",
+  "JUDO": "Judo",
   "KP_COEFF": "Réactivité post-repas",
   "LARGE_MEAL_BREAKFAST": "Petit-déjeuner - grand",
   "LARGE_MEAL_DINNER": "Dîner - grand",
@@ -34,9 +51,12 @@
   "MEDIUM_MEAL_BREAKFAST": "Petit-déjeuner - moyen",
   "MEDIUM_MEAL_DINNER": "Dîner - moyen",
   "MEDIUM_MEAL_LUNCH": "Déjeuner - moyen",
+  "MIXED": "Sport - Mixte",
   "MODEL_MISMATCH_THRESHOLD": "Model mismatch threshold",
+  "MOTORSPORT": "Sport mécanique",
   "NIGHT_MODEL_MISMATCH_THRESHOLD": "Model mismatch threshold nuit",
   "NIGHT_TARGET_MAJORATION_OFFSET": "Majoration de la cible pendant la nuit",
+  "NORDIC_SKIING": "Ski nordique",
   "OFFSET_TARGET_BOLUS_MD": "",
   "OFFSET_TARGET_BOLUS_MD_POST_SUGARING": "Offset sur la glycémie cible post-resucrage",
   "OFFSET_TARGET_BOLUS_MD_POST_SUGARING_DURATION": "Durée offset sur la glycémie cible post-resucrage",
@@ -47,16 +67,29 @@
   "PMM_ACTIVE": "",
   "PMM_MEAL_BOLUS_FRACTION": "Régularité vitesse de digestion",
   "PREDICTION_OFFSET_DURATION": "Durée de l'offset de prédiction",
+  "ROWING": "Aviron",
+  "RUGBY": "Rugby",
+  "RUNNING": "Course à pied",
+  "SKATING": "Patinage",
+  "SKIING": "Ski",
   "SLOPE_THRESH_ALGO_MD": "Slope thresh algo",
   "SMALL_MEAL_BREAKFAST": "Petit-déjeuner - petit",
   "SMALL_MEAL_DINNER": "Dîner - petit",
   "SMALL_MEAL_LUNCH": "Déjeuner - petit",
   "SNACK_INHIBITION_DURATION": "Durée d'inhibition post resucrage",
   "SNACK_INHIBITION_DURATION_PA": "",
+  "SOCCER": "Football",
+  "SQUASH": "Squash",
   "SUGARING_RATIO": "Ratio resucrage",
+  "SWIMMING": "Natation",
+  "TENNIS": "Tennis",
   "TOTAL_INSULIN_DOSE_1H": "Max insuline basale 1h",
   "TOTAL_INSULIN_FOR_24H": "Insuline Totale sur 24h",
+  "VOLLEY_BALL": "Volley-ball",
+  "WALKING": "Marche",
   "WEIGHT": "Poids",
+  "WEIGHTLIFTING": "Musculation",
+  "WRESTLING": "Lutte",
   "ZEN_MODE_DURATION": "Durée",
   "ZEN_MODE_GLYCEMIA_TARGET_OFFSET": "Offset sur la glycémie cible"
 }
