--- a/locales/it/parameter.json
+++ b/locales/it/parameter.json
@@ -1,21 +1,38 @@
 {
+  "AEROBIC_DEFAULT": "Sport",
   "AFTER_MEAL_FORCE_MD_DURATION": "Durata inibizione dopo il pasto",
   "AFTER_MEAL_INHIB_DURATION": "",
+  "AMERICAN_FOOTBALL": "American football",
+  "ANAEROBIC": "Sport – anaerobic",
+  "BADMINTON": "Badminton",
   "BASAL_RATIO": "Bolo massimo",
+  "BASEBALL": "Baseball",
+  "BASKET_BALL": "Basket-ball",
   "BOLUS_AGGRESSIVENESS_FACTOR": "Aggressività in iperglicemia",
   "BOLUS_MAX": "",
   "COB_DURATION": "",
   "COB_TAU_GLY": "",
+  "COMBAT": "Combat sport",
   "COMPENSATION_FACTOR": "Fattore di correzione",
+  "CONSTRUCTION_WORK": "Construction work",
   "CR_GLY_A": "Fattore di correzione adattativo",
   "CR_GLY_FACTOR_HIGH": "Fattore di correzione adattativo alto",
   "CR_GLY_FACTOR_LOW": "Fattore di correzione adattativo basso",
+  "CYCLING": "Cycling",
+  "DANCING": "Dancing",
+  "GOLF": "Golf",
+  "GYMNASTICS": "Gymnastics",
+  "HANDBALL": "Handball",
   "HEIGHT": "Taglia",
+  "HIKING": "Hiking",
+  "HOCKEY": "Hockey",
+  "HOUSEHOLD_CHORES": "Household chores",
   "HYPO_FAR_FORWARD_PRED_DURATION": "Durata per la previsione dell’ipoglicemia",
   "IOB_REAL_MIN_LEVEL": "Fattore IOB livello minimo",
   "IOB_REAL_SECU_FACTOR": "Fattore di sicurezza per IOB",
   "IOB_RISK_ACTIVE": "Attivazione rischio IOB Hypominimizer",
   "IOB_TAU_S": "Velocità d’azione dell’insulina",
+  "JUDO": "Judo",
   "KP_COEFF": "Aggressività dopo i pasti",
   "LARGE_MEAL_BREAKFAST": "Colazione - grande",
   "LARGE_MEAL_DINNER": "Cena - grande",
@@ -34,9 +51,12 @@
   "MEDIUM_MEAL_BREAKFAST": "Colazione - media",
   "MEDIUM_MEAL_DINNER": "Cena - media",
   "MEDIUM_MEAL_LUNCH": "Pranzo - medio",
+  "MIXED": "Sport – mixed",
   "MODEL_MISMATCH_THRESHOLD": "",
+  "MOTORSPORT": "Motorsport",
   "NIGHT_MODEL_MISMATCH_THRESHOLD": "",
   "NIGHT_TARGET_MAJORATION_OFFSET": "Incremento ideale notte",
+  "NORDIC_SKIING": "Nordic skiing",
   "OFFSET_TARGET_BOLUS_MD": "",
   "OFFSET_TARGET_BOLUS_MD_POST_SUGARING": "Offset sul livello glicemico ideale dopo l’assunzione di carboidrati di emergenza",
   "OFFSET_TARGET_BOLUS_MD_POST_SUGARING_DURATION": "",
@@ -47,16 +67,29 @@
   "PMM_ACTIVE": "",
   "PMM_MEAL_BOLUS_FRACTION": "Prevedibilità della velocità di digestione",
   "PREDICTION_OFFSET_DURATION": "",
+  "ROWING": "Rowing",
+  "RUGBY": "Rugby",
+  "RUNNING": "Running",
+  "SKATING": "Skating",
+  "SKIING": "Skiing",
   "SLOPE_THRESH_ALGO_MD": "",
   "SMALL_MEAL_BREAKFAST": "Colazione - piccola",
   "SMALL_MEAL_DINNER": "Cena - piccola",
   "SMALL_MEAL_LUNCH": "Pranzo - piccolo",
   "SNACK_INHIBITION_DURATION": "",
   "SNACK_INHIBITION_DURATION_PA": "",
+  "SOCCER": "Soccer",
+  "SQUASH": "Squash",
   "SUGARING_RATIO": "",
+  "SWIMMING": "Swimming",
+  "TENNIS": "Tennis",
   "TOTAL_INSULIN_DOSE_1H": "Velocità basale oraria max",
   "TOTAL_INSULIN_FOR_24H": "Quantità di insulina giornaliera",
+  "VOLLEY_BALL": "Volley-ball",
+  "WALKING": "Walking",
   "WEIGHT": "Peso",
+  "WEIGHTLIFTING": "Weightlifting",
+  "WRESTLING": "Wrestling",
   "ZEN_MODE_DURATION": "",
   "ZEN_MODE_GLYCEMIA_TARGET_OFFSET": ""
 }
