--- a/locales/ja/parameter.json
+++ b/locales/ja/parameter.json
@@ -1,21 +1,38 @@
 {
+  "AEROBIC_DEFAULT": "Sport",
   "AFTER_MEAL_FORCE_MD_DURATION": "食後のMD時間",
   "AFTER_MEAL_INHIB_DURATION": "食後のアラーム抑制時間",
+  "AMERICAN_FOOTBALL": "American football",
+  "ANAEROBIC": "Sport – anaerobic",
+  "BADMINTON": "Badminton",
   "BASAL_RATIO": "",
+  "BASEBALL": "Baseball",
+  "BASKET_BALL": "Basket-ball",
   "BOLUS_AGGRESSIVENESS_FACTOR": "高血糖における応答性",
   "BOLUS_MAX": "最大ボーラス",
   "COB_DURATION": "残存カーボの持続時間",
   "COB_TAU_GLY": "COB TAU GLY",
+  "COMBAT": "Combat sport",
   "COMPENSATION_FACTOR": "補正係数",
+  "CONSTRUCTION_WORK": "Construction work",
   "CR_GLY_A": "適応補正係数",
   "CR_GLY_FACTOR_HIGH": "適応補正係数 : 高係数",
   "CR_GLY_FACTOR_LOW": "適応補正係数 : 低係数",
+  "CYCLING": "Cycling",
+  "DANCING": "Dancing",
+  "GOLF": "Golf",
+  "GYMNASTICS": "Gymnastics",
+  "HANDBALL": "Handball",
   "HEIGHT": "身長",
+  "HIKING": "Hiking",
+  "HOCKEY": "Hockey",
+  "HOUSEHOLD_CHORES": "Household chores",
   "HYPO_FAR_FORWARD_PRED_DURATION": "長期低血糖予測",
   "IOB_REAL_MIN_LEVEL": "最小残存インスリン係数",
   "IOB_REAL_SECU_FACTOR": "残存インスリン(IOB)の安全係数",
   "IOB_RISK_ACTIVE": "ハイポミニマイザー残存インスリンリスクの起動",
   "IOB_TAU_S": "インスリン作用速度",
+  "JUDO": "Judo",
   "KP_COEFF": "食後の応答性",
   "LARGE_MEAL_BREAKFAST": "朝食-多量",
   "LARGE_MEAL_DINNER": "夕食-多量",
@@ -34,9 +51,12 @@
   "MEDIUM_MEAL_BREAKFAST": "標準的な朝食量",
   "MEDIUM_MEAL_DINNER": "標準的な夕食量",
   "MEDIUM_MEAL_LUNCH": "標準的な昼食量",
+  "MIXED": "Sport – mixed",
   "MODEL_MISMATCH_THRESHOLD": "",
+  "MOTORSPORT": "Motorsport",
   "NIGHT_MODEL_MISMATCH_THRESHOLD": "",
   "NIGHT_TARGET_MAJORATION_OFFSET": "夜間における目標血糖値の上昇",
+  "NORDIC_SKIING": "Nordic skiing",
   "OFFSET_TARGET_BOLUS_MD": "",
   "OFFSET_TARGET_BOLUS_MD_POST_SUGARING": "レスキューカーボ後の目標血糖値のオフセット",
   "OFFSET_TARGET_BOLUS_MD_POST_SUGARING_DURATION": "レスキューカーボ摂取後のオフセット時間",
@@ -47,16 +67,29 @@
   "PMM_ACTIVE": "",
   "PMM_MEAL_BOLUS_FRACTION": "消化速度の予測可能性",
   "PREDICTION_OFFSET_DURATION": "予測オフセットの時間",
+  "ROWING": "Rowing",
+  "RUGBY": "Rugby",
+  "RUNNING": "Running",
+  "SKATING": "Skating",
+  "SKIING": "Skiing",
   "SLOPE_THRESH_ALGO_MD": "勾配しきい値アルゴリズム",
   "SMALL_MEAL_BREAKFAST": "朝食-少量",
   "SMALL_MEAL_DINNER": "夕食-少量",
   "SMALL_MEAL_LUNCH": "昼食-少量",
   "SNACK_INHIBITION_DURATION": "レスキューカーボ摂取後のアラーム抑制時間",
   "SNACK_INHIBITION_DURATION_PA": "",
+  "SOCCER": "Soccer",
+  "SQUASH": "Squash",
   "SUGARING_RATIO": "レスキューカーボ比",
+  "SWIMMING": "Swimming",
+  "TENNIS": "Tennis",
   "TOTAL_INSULIN_DOSE_1H": "1時間あたりの最大基礎レート",
   "TOTAL_INSULIN_FOR_24H": "一日の総インスリン投与量",
+  "VOLLEY_BALL": "Volley-ball",
+  "WALKING": "Walking",
   "WEIGHT": "体重",
+  "WEIGHTLIFTING": "Weightlifting",
+  "WRESTLING": "Wrestling",
   "ZEN_MODE_DURATION": "持続時間",
   "ZEN_MODE_GLYCEMIA_TARGET_OFFSET": "目標血糖値のオフセット"
 }
