--- a/locales/nl/parameter.json
+++ b/locales/nl/parameter.json
@@ -1,21 +1,38 @@
 {
+  "AEROBIC_DEFAULT": "Sport",
   "AFTER_MEAL_FORCE_MD_DURATION": "Tijdsduur in MD na een maaltijd",
   "AFTER_MEAL_INHIB_DURATION": "Tijdsduur van afremming maaltijd",
+  "AMERICAN_FOOTBALL": "American football",
+  "ANAEROBIC": "Sport – anaeroob",
+  "BADMINTON": "Badminton",
   "BASAL_RATIO": "",
+  "BASEBALL": "Honkbal",
+  "BASKET_BALL": "Basketball",
   "BOLUS_AGGRESSIVENESS_FACTOR": "Agressiviteit bij hyperglykemie",
   "BOLUS_MAX": "Max. bolus",
   "COB_DURATION": "Tijdsduur van COB",
   "COB_TAU_GLY": "COB TAU GLY",
+  "COMBAT": "Vechtsport",
   "COMPENSATION_FACTOR": "Correctiefactor",
+  "CONSTRUCTION_WORK": "Bouwwerkzaamheden",
   "CR_GLY_A": "Adaptieve correctiefactor",
   "CR_GLY_FACTOR_HIGH": "Adaptieve correctiefactor: hoge factor",
   "CR_GLY_FACTOR_LOW": "",
+  "CYCLING": "Fietsen",
+  "DANCING": "Dansen",
+  "GOLF": "Golf",
+  "GYMNASTICS": "Gymnastiek",
+  "HANDBALL": "Handbal",
   "HEIGHT": "Lengte",
+  "HIKING": "Wandelen",
+  "HOCKEY": "Hockey",
+  "HOUSEHOLD_CHORES": "Huishoudelijke klusjes",
   "HYPO_FAR_FORWARD_PRED_DURATION": "Hypo lange termijn voorspelling",
   "IOB_REAL_MIN_LEVEL": "",
   "IOB_REAL_SECU_FACTOR": "Veiligheidsfactor van IOB",
   "IOB_RISK_ACTIVE": "Hypo-minimizer IOB-risico-activering",
   "IOB_TAU_S": "Werkingssnelheid van insuline",
+  "JUDO": "Judo",
   "KP_COEFF": "Agressiviteit na de maaltijd",
   "LARGE_MEAL_BREAKFAST": "Ontbijt - Groot",
   "LARGE_MEAL_DINNER": "Avondmaal - Groot",
@@ -34,9 +51,12 @@
   "MEDIUM_MEAL_BREAKFAST": "Ontbijt - Gemiddeld",
   "MEDIUM_MEAL_DINNER": "Avondmaal - Gemiddeld",
   "MEDIUM_MEAL_LUNCH": "Lunch - Gemiddeld",
+  "MIXED": "Sport – gemengd",
   "MODEL_MISMATCH_THRESHOLD": "",
+  "MOTORSPORT": "Motorsport",
   "NIGHT_MODEL_MISMATCH_THRESHOLD": "",
   "NIGHT_TARGET_MAJORATION_OFFSET": "",
+  "NORDIC_SKIING": "Noords skiën",
   "OFFSET_TARGET_BOLUS_MD": "",
   "OFFSET_TARGET_BOLUS_MD_POST_SUGARING": "",
   "OFFSET_TARGET_BOLUS_MD_POST_SUGARING_DURATION": "Duur van de toename van de streefwaarde van de glucosespiegel na inname van reddingskoolhydraten",
@@ -47,16 +67,29 @@
   "PMM_ACTIVE": "",
   "PMM_MEAL_BOLUS_FRACTION": "Voorspelbaarheid spijsverteringssnelheid",
   "PREDICTION_OFFSET_DURATION": "",
+  "ROWING": "Roeien",
+  "RUGBY": "Rugby",
+  "RUNNING": "Hardlopen",
+  "SKATING": "Schaatsen",
+  "SKIING": "Skiën",
   "SLOPE_THRESH_ALGO_MD": "Helling grenswaardealgoritme",
   "SMALL_MEAL_BREAKFAST": "Ontbijt - Klein",
   "SMALL_MEAL_DINNER": "Avondmaal - Klein",
   "SMALL_MEAL_LUNCH": "Lunch - Klein",
   "SNACK_INHIBITION_DURATION": "",
   "SNACK_INHIBITION_DURATION_PA": "",
+  "SOCCER": "Voetbal",
+  "SQUASH": "Squash",
   "SUGARING_RATIO": "Reddingskoolhydratenfactor",
+  "SWIMMING": "Zwemmen",
+  "TENNIS": "Tennis",
   "TOTAL_INSULIN_DOSE_1H": "Max. basale dosering voor een tijdsperiode van één uur",
   "TOTAL_INSULIN_FOR_24H": "Totale dagelijkse insulinedosis",
+  "VOLLEY_BALL": "Volleybal",
+  "WALKING": "Lopen",
   "WEIGHT": "Gewicht",
+  "WEIGHTLIFTING": "Gewichtheffen",
+  "WRESTLING": "Worstelen",
   "ZEN_MODE_DURATION": "Tijdsduur",
   "ZEN_MODE_GLYCEMIA_TARGET_OFFSET": "Vertraging op de streefwaarde van de glucosespiegel"
 }
