--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -14,6 +14,7 @@
   "50% of Readings": "50% of readings",
   "80% of Readings": "80% of readings",
   "A_Label": "ON",
+  "Activation code": "Activation code",
   "Advanced": "Advanced",
   "An unknown error occurred": "An unknown error occurred",
   "Anonymous user": "Anonymous user",
@@ -145,6 +146,8 @@
   "Showing BGM data (no CGM)": "Showing BGM data (no CGM)",
   "Showing BGM data (not enough CGM)": "Showing BGM data (not enough CGM)",
   "Showing CGM data": "Showing CGM data",
+  "Smartphone model": "Smartphone model",
+  "Smartphone OS version": "Smartphone OS version",
   "Software version": "Software version",
   "Su_Sunday": "Su",
   "Suspends": "Suspends",
