YLP-3480 Update cartridge changes UI

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -94,6 +94,8 @@
   "Loop mode": "Loop mode ON",
   "Loop mode off": "Loop mode OFF",
   "Loop mode status": "Loop mode",
+  "millisecond": "millisecond",
+  "milliseconds": "milliseconds",
   "MMM D": "MMM D",
   "MMM D, YYYY": "MMM D, YYYY",
   "MMM D, YYYY h:mm a": "MMM D, YYYY h:mm a",
@@ -112,7 +114,6 @@
   "Name": "Name",
   "New": "New",
   "No BG data available": "No BG data available",
-  "No available data to display here, sorry!": "No available data to display here!",
   "No diabeloop device informations available": "No information available",
   "No diabeloop device parameters available": "No information available",
   "Override": "Override",
@@ -238,6 +239,7 @@
   "pdf-date-range": "Date range: {{range}}",
   "pdf-footer-center-text": "Diabeloop - {{appURL}}",
   "scheduled": "scheduled",
+  "second": "second",
   "seconds": "seconds",
   "settings": "Settings",
   "to": "to",
