--- a/locales/en/yourloops.json
+++ b/locales/en/yourloops.json
@@ -414,6 +414,7 @@
   "new-unread-messages": "The patient has sent you new messages",
   "night-mode": "Night mode",
   "no": "No",
+  "no-cartridge-changes": "No cartridge changes over the period",
   "no-insulin-left-in-reservoir": "There is no insulin left in the reservoir.",
   "no-medical-files-hcp": "No medical files have yet been created.",
   "no-medical-files-patient": "No medical files have yet been created by your healthcare professional.",
