YLP-3596-display-activation-code (#1798)
* Add basic info

* format activation code

* publish a specific version of blip when we merge on main

--- a/locales/en/yourloops.json
+++ b/locales/en/yourloops.json
@@ -25,6 +25,7 @@
   "account-preferences": "Profile settings",
   "acknowledge-training": "I went through the entire training and I understood it",
   "actions": "Actions",
+  "activation-code": "Activation code",
   "add-new-patient-disabled-info": "To invite a patient, you must first select a care team from the dropdown menu. You can create you own care team if you need to. Alternatively, you can provide the patient with your YourLoops email address so they can enable private data sharing with you.",
   "add-patient": "Add a patient",
   "added": "Added",
@@ -507,6 +508,8 @@
   "signup-steppers-ending-message-1": "Please follow the link in the email we just sent you at <strong>{{email}}</strong> to verify and activate your account.",
   "signup-steppers-ending-message-2": "If you don’t receive any email from us, please contact our support at <a href=\"mailto:technical.support@diabeloop.com\">technical.support@diabeloop.com</a>",
   "signup-unknown-step": "Unknown step",
+  "smartphone-model": "Smartphone model",
+  "smartphone-os-version": "Smartphone OS version",
   "standard-deviation": "Standard Deviation",
   "standard-deviation-tooltip": "**SD (Standard Deviation):** How far values are from the average.",
   "start-time": "Start time",
