add translation keys in other files

--- a/locales/de/yourloops.json
+++ b/locales/de/yourloops.json
@@ -120,6 +120,7 @@
   "aria-team-leave-dialog-title": "Behandlungsteam verlassen",
   "average-daily-insulin-tooltip": "**Ø Tagesinsulin-Gesamtmenge:** Alle Basal- und Bolus-Insulinabgaben (in Einheiten) addiert, geteilt durch die Anzahl der Tage in dieser Ansicht",
   "average-daily-total-insulin": "Ø Tägliches Gesamtinsulin",
+  "average-daily-estimated-total-insulin": "Ø geschätztes tägliches Gesamtinsulin",
   "average-glucose": "Ø Glukose ({{bgSourceLabel}})",
   "average-glucose-tooltip": "**Ø Glukose ({{bgSourceLabel}}):** Alle {{bgSourceLabel}} Glukosewerte addiert, geteilt durch die Anzahl der Messwerte.",
   "avg-daily-carbs": "Ø tägl. Kohlenhydratmenge",
@@ -269,6 +270,10 @@
   "error-http-500": "Etwas ist schiefgelaufen. Bitte versuchen Sie es in einigen Augenblicken erneut. Wenn das Problem weiterhin besteht, wenden Sie sich an den Support.",
   "error-patient-already-in-team": "Dieser Patient teilt bereits Daten mit dem Team.",
   "error-patient-already-invited": "Dieser Patient wurde bereits eingeladen und hat die Einladung noch nicht bestätigt.",
+  "estimated-total-insulin": "Geschätztes Gesamtinsulin",
+  "estimated-total-insulin-tooltip": "**Geschätztes Gesamtinsulin:** Geschätztes Gesamtinsulin (in Einheiten) für den Zeitraum, in dem der Loop-Modus AN (ON) ist. Es wird aus der Summe aller Basal- und Bolus-Insulinabgaben berechnet.",
+  "estimated-total-insulin-avg-how-calculate-tooltip": "**:**  Geschätztes Gesamtinsulin (in Einheiten) für den Zeitraum, in dem der Loop-Modus AN (ON) ist, geteilt durch die Anzahl der Tage in dieser Ansicht.",
+  "estimated-total-insulin-how-calculate-tooltip": "**:** ",
   "event-trigger-threshold": "Schwellenwert für die Ereignisauslösung",
   "feedback-checkbox": "Feedback-Kontrollkästchen",
   "filter-cannot-apply-pending-tab": "Filter können auf Registerkarte „Ausstehend“ nicht angewendet werden",
