--- a/locales/en/yourloops.json
+++ b/locales/en/yourloops.json
@@ -120,7 +120,7 @@
   "aria-team-leave-dialog-title": "Leave care team",
   "average-daily-insulin-tooltip": "**Avg. Daily Total Insulin:** All basal and bolus insulin delivery (in Units) added together, divided by the number of days in this view",
   "average-daily-total-insulin": "Avg. Daily Total Insulin",
-  "average-daily-estimated-total-insulin": "Avg. Daily Estimated Total Insulin",
+  "average-daily-estimated-total-insulin": "Avg. Daily Estimated Total Insulin Requirement",
   "average-glucose": "Avg. Glucose ({{bgSourceLabel}})",
   "average-glucose-tooltip": "**Avg. Glucose ({{bgSourceLabel}}):** All {{bgSourceLabel}} glucose values added together, divided by the number of readings.",
   "avg-daily-carbs": "Avg. Daily Carbs",
@@ -270,8 +270,8 @@
   "error-http-500": "Something went wrong. Please try again in a few moments. If problem persists, contact support for assistance",
   "error-patient-already-in-team": "This patient is already sharing data with the team.",
   "error-patient-already-invited": "This patient has already been invited and hasn't confirmed yet.",
-  "estimated-total-insulin": "Estimated Total Insulin",
-  "estimated-total-insulin-tooltip": "**Estimated Total Insulin:** Estimation of the patient's total insulin requirements (both basal and bolus, in Units) over 24 hours. This estimation only takes into account the period in Loop Mode, so it is as close as possible to the patient's actual physiological needs. If the patient spends too little time in Loop Mode, it is not possible to compute precise physiological insulin needs.",
+  "estimated-total-insulin": "Estimated Total Insulin Requirement",
+  "estimated-total-insulin-tooltip": "**Estimated Total Insulin Requirement:** Estimation of the patient's total insulin requirements (both basal and bolus, in Units) over 24 hours. This estimation only takes into account the period in Loop Mode, so it is as close as possible to the patient's actual physiological needs. If the patient spends too little time in Loop Mode, it is not possible to compute precise physiological insulin needs.",
   "estimated-total-insulin-avg-how-calculate-tooltip": "**How we calculate this:**  All basal and bolus insulin delivery during closed-loop period (in Units) added together, normalised for 24h, and divided by the number of days in this view.",
   "estimated-total-insulin-how-calculate-tooltip": "**How we calculate this:** All basal and bolus insulin delivery during closed-loop period (in Units) added together, and normalised for 24h",
   "event-trigger-threshold": "Event trigger threshold",
@@ -586,8 +586,8 @@
   "tooltip-release-notes": "Release notes",
   "tooltip-smbg-data": "Derived from _**{{total}}**_ {{smbgLabel}} readings.",
   "total-declared-carbs": "Total of declared carbs",
-  "total-insulin": "Total Insulin",
-  "total-insulin-days-tooltip": "**Total Insulin:** All basal and bolus insulin delivery (in Units) added together",
+  "total-insulin": "Total Insulin Delivered",
+  "total-insulin-days-tooltip": "**Total Insulin Delivered:** All basal and bolus insulin delivery (in Units) added together",
   "total-insulin-how-calculate-tooltip": "**How we calculate this:** (%) is the respective total of basal or bolus delivery divided by total insulin delivered for this time period.",
   "training": "Training",
   "training-body": "New training available, please read what's new before continuing on YourLoops.",
