--- a/locales/es/yourloops.json
+++ b/locales/es/yourloops.json
@@ -120,6 +120,7 @@
   "aria-team-leave-dialog-title": "Abandonar el equipo de atención médica",
   "average-daily-insulin-tooltip": "**Prom. total de insulina diario:** suma de todas las administraciones de insulina basal y de bolo (en unidades) dividida entre el número de días de esta vista",
   "average-daily-total-insulin": "Prom. total de insulina diario",
+  "average-daily-estimated-total-insulin": "",
   "average-glucose": "Prom. glucemia ({{bgSourceLabel}})",
   "average-glucose-tooltip": "**Prom. glucemia ({{bgSourceLabel}}):** suma de todos los valores de glucemia del {{bgSourceLabel}} dividida entre el número de lecturas.",
   "avg-daily-carbs": "Prom. carbohidratos diarios",
@@ -269,6 +270,10 @@
   "error-http-500": "Algo salió mal. Vuelva a intentarlo más tarde. Si el problema persiste, póngase en contacto con el servicio de atención al cliente para recibir ayuda",
   "error-patient-already-in-team": "Este paciente ya está compartiendo datos con el equipo.",
   "error-patient-already-invited": "Ya se invitó a este paciente, quien aún no ha confirmado.",
+  "estimated-total-insulin": "",
+  "estimated-total-insulin-tooltip": "**:**",
+  "estimated-total-insulin-avg-how-calculate-tooltip": "**:** ",
+  "estimated-total-insulin-how-calculate-tooltip": "**:** ",
   "event-trigger-threshold": "Umbral de generación de evento",
   "feedback-checkbox": "Casilla de verificación de comentarios",
   "filter-cannot-apply-pending-tab": "No se pueden aplicar filtros en la pestaña Pendiente",
