--- a/locales/fr/yourloops.json
+++ b/locales/fr/yourloops.json
@@ -121,6 +121,7 @@
   "average-daily-insulin-tooltip": "**Moy. insuline totale quotidienne :** Dose totale d'insuline délivrée (en unités), divisée par le nombre de jours dans cette vue",
   "average-daily-total-insulin": "Moy. quotidienne insuline totale",
   "average-glucose": "Glycémie moyenne ({{bgSourceLabel}})",
+  "average-daily-estimated-total-insulin": "",
   "average-glucose-tooltip": "**Glycémie moyenne ({{bgSourceLabel}}) :** Moyenne de toutes les données {{bgSourceLabel}}.",
   "avg-daily-carbs": "Moy. quotidienne glucides",
   "avg-daily-declared-carbs": "Moy. quoti. glucides déclarés",
@@ -269,6 +270,10 @@
   "error-http-500": "Un erreur est survenue. Veuillez réessayer dans quelques instants. Si le problème persiste, contactez le support.",
   "error-patient-already-in-team": "Ce patient partage déjà ses données avec l'équipe.",
   "error-patient-already-invited": "Ce·tte patient·e a déjà été invité·e et n'a pas encore accepté l'invitation.",
+  "estimated-total-insulin": "",
+  "estimated-total-insulin-tooltip": "**:**",
+  "estimated-total-insulin-avg-how-calculate-tooltip": "**:**  ",
+  "estimated-total-insulin-how-calculate-tooltip": "**H:**",
   "event-trigger-threshold": "Seuil de déclenchement d'événement",
   "feedback-checkbox": "Case à cocher \"Feedback\"",
   "filter-cannot-apply-pending-tab": "Les filtres ne peuvent pas être appliqués sur l'onglet En attente",
