--- a/locales/it/yourloops.json
+++ b/locales/it/yourloops.json
@@ -120,6 +120,7 @@
   "aria-team-leave-dialog-title": "Esci dal team di cura",
   "average-daily-insulin-tooltip": "**Insulina media giornaliera:** somma di tutte le erogazioni di insulina basale e insulina del bolo (in unità), divisa per il numero di giorni di questa vista",
   "average-daily-total-insulin": "Insulina totale giornaliera media",
+  "average-daily-estimated-total-insulin": "",
   "average-glucose": "Glucosio medio ({{bgSourceLabel}})",
   "average-glucose-tooltip": "**Glucosio medio ({{bgSourceLabel}}):** somma di tutti i valori di glicemia {{bgSourceLabel}}, divisa per il numero di letture.",
   "avg-daily-carbs": "Carboidrati medi giornalieri",
@@ -269,6 +270,10 @@
   "error-http-500": "Si è verificato un problema. Riprova tra qualche minuto. Se il problema persiste, contatta il supporto per ricevere assistenza",
   "error-patient-already-in-team": "Questo paziente sta già condividendo i dati con il team.",
   "error-patient-already-invited": "Questo paziente è già stato invitato ma non ha ancora confermato.",
+  "estimated-total-insulin": "",
+  "estimated-total-insulin-tooltip": "****",
+  "estimated-total-insulin-avg-how-calculate-tooltip": "**:**  ",
+  "estimated-total-insulin-how-calculate-tooltip": "**:**",
   "event-trigger-threshold": "Soglia di attivazione evento",
   "feedback-checkbox": "Casella di controllo per feedback",
   "filter-cannot-apply-pending-tab": "Impossibile applicare filtri sulla scheda In attesa",
