--- a/locales/ja/yourloops.json
+++ b/locales/ja/yourloops.json
@@ -120,6 +120,7 @@
   "average-daily-total-insulin": "平均一日の総インスリン投与量/日",
   "average-glucose": "平均血糖値({{bgSourceLabel}})",
   "average-glucose-tooltip": "**平均血糖値（{{bgSourceLabel}}）** 全ての{{bgSourceLabel}}血糖値の合計から、測定回数を割ったもの。",
+  "average-daily-estimated-total-insulin": "",
   "avg-daily-carbs": "平均糖質量/日",
   "avg-daily-declared-carbs": "平均申告糖質量/日",
   "avg-time-loop": "平均loopモード時間/日",
@@ -267,6 +268,10 @@
   "error-http-500": "問題が発生しました。しばらくしてからもう一度お試しください。問題が解決しない場合は、テルモ株式会社 担当者へご連絡ください。",
   "error-patient-already-in-team": "この患者は既にチームとデータを共有しています。",
   "error-patient-already-invited": "この患者は既に招待されていますが、まだ承認されていません。",
+  "estimated-total-insulin": "",
+  "estimated-total-insulin-tooltip": "**:** ",
+  "estimated-total-insulin-avg-how-calculate-tooltip": "**:**  ",
+  "estimated-total-insulin-how-calculate-tooltip": "**:** ",
   "event-trigger-threshold": "データトリガー閾値",
   "feedback-checkbox": "フィードバックチェックボックス",
   "filter-cannot-apply-pending-tab": "保留中のタブにはフィルターを適用できません。",
