--- a/locales/nl/yourloops.json
+++ b/locales/nl/yourloops.json
@@ -120,6 +120,7 @@
   "aria-team-leave-dialog-title": "Behandelteam verlaten",
   "average-daily-insulin-tooltip": "**Gem. dagelijkse totale insulinedosis:** alle basale- en bolusinsulinetoedieningen (in eenheden) bij elkaar opgeteld, gedeeld door het aantal dagen in deze weergave",
   "average-daily-total-insulin": "Gem. dagelijkse totale insulinedosis",
+  "average-daily-estimated-total-insulin": "",
   "average-glucose": "Gem. glucose ({{bgSourceLabel}})",
   "average-glucose-tooltip": "**Gem. glucose ({{bgSourceLabel}}):** alle {{bgSourceLabel}} glucosewaarden bij elkaar opgeteld, gedeeld door het aantal metingen.",
   "avg-daily-carbs": "Gemiddelde dagelijkse koolhydraten",
@@ -269,6 +270,10 @@
   "error-http-500": "Er is iets fout gegaan. Probeer het over enkele ogenblikken opnieuw. Als het probleem aanhoudt, neem dan contact op met de support voor hulp.",
   "error-patient-already-in-team": "Deze patiënt deelt al gegevens met het team.",
   "error-patient-already-invited": "Deze patiënt is al uitgenodigd en heeft nog niet bevestigd.",
+  "estimated-total-insulin": "",
+  "estimated-total-insulin-tooltip": "**:** ",
+  "estimated-total-insulin-avg-how-calculate-tooltip": "**:**  ",
+  "estimated-total-insulin-how-calculate-tooltip": "**:** ",
   "event-trigger-threshold": "Triggergrenswaarde voor gebeurtenis",
   "feedback-checkbox": "Selectievakje voor feedback",
   "filter-cannot-apply-pending-tab": "Filters kunnen niet worden toegepast op het tabblad In behandeling",
