enhance translations tests

--- a/locales/de/translation.json
+++ b/locales/de/translation.json
@@ -122,7 +122,7 @@
   "Parameter": "Parameter",
   "Parameters History": "Parameter Historie",
   "Physical Activity": "Körperliche Aktivität",
-  "Please choose a preferred site change source from the 'Basics' web view to view this data.": "Bitte wählen Sie in der Webansicht „Grundlagen“ eine bevorzugte Quelle für Standortänderungen aus, um diese Daten anzuzeigen.",
+  "select-view-to-see-data": "Bitte wählen Sie in der Webansicht „Grundlagen“ eine bevorzugte Quelle für Standortänderungen aus, um diese Daten anzuzeigen.",
   "Post_submit": "Nach",
   "Prescribed by Loop Mode": "Loop-Modus",
   "Printed on: ": "Gedruckt am: ",
@@ -154,8 +154,7 @@
   "Th_Thursday": "Do",
   "The Basics": "Übersicht",
   "There is no {{displayType}} data for this time period :(": "Es gibt keine {{displayType}}-Daten für diesen Zeitraum :(",
-  "This section requires data from a blood-glucose meter, so there's nothing to display.": "Nichts zum Anzeigen!",
-  "This section requires data from an insulin pump, so there's nothing to display.": "Nichts zum Anzeigen!",
+  "nothing-to-display": "Nichts zum Anzeigen!",
   "Time Above Range": "Zeit oberhalb des Bereichs",
   "Time Below Range": "Zeit unterhalb des Bereichs",
   "Time Change": "Zeitänderung",
