--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -122,7 +122,7 @@
   "Parameter": "Setting",
   "Parameters History": "Settings History",
   "Physical Activity": "Physical Activity",
-  "Please choose a preferred site change source from the 'Basics' web view to view this data.": "Please choose a preferred site change source from the 'Basics' web view to view this data.",
+  "select-view-to-see-data": "Please choose a preferred site change source from the 'Basics' web view to view this data.",
   "Post_submit": "Post",
   "Prescribed by Loop Mode": "Loop mode",
   "Printed on: ": "Printed on: ",
@@ -154,8 +154,7 @@
   "Th_Thursday": "Th",
   "The Basics": "Overview",
   "There is no {{displayType}} data for this time period :(": "There is no {{displayType}} data for this time period :(",
-  "This section requires data from a blood-glucose meter, so there's nothing to display.": "Nothing to display!",
-  "This section requires data from an insulin pump, so there's nothing to display.": "Nothing to display!",
+  "nothing-to-display": "Nothing to display!",
   "Time Above Range": "Time Above Range",
   "Time Below Range": "Time Below Range",
   "Time Change": "Time Change",
