--- a/locales/nl/translation.json
+++ b/locales/nl/translation.json
@@ -122,7 +122,7 @@
   "Parameter": "Instelling",
   "Parameters History": "Overzicht van instellingen",
   "Physical Activity": "Sportactiviteit",
-  "Please choose a preferred site change source from the 'Basics' web view to view this data.": "Kies een voorkeursbron voor plaatswijzigingen in de webweergave Basis om deze gegevens weer te geven.",
+  "select-view-to-see-data": "Kies een voorkeursbron voor plaatswijzigingen in de webweergave Basis om deze gegevens weer te geven.",
   "Post_submit": "Post",
   "Prescribed by Loop Mode": "Loop-modus",
   "Printed on: ": "Afgedrukt op: ",
@@ -154,8 +154,7 @@
   "Th_Thursday": "Th",
   "The Basics": "Overzicht",
   "There is no {{displayType}} data for this time period :(": "Er zijn geen {{displayType}}-gegevens voor deze periode :(",
-  "This section requires data from a blood-glucose meter, so there's nothing to display.": "Niets weer te geven!",
-  "This section requires data from an insulin pump, so there's nothing to display.": "Niets weer te geven!",
+  "nothing-to-display": "Niets weer te geven!",
   "Time Above Range": "Tijd boven bereik",
   "Time Below Range": "Tijd onder bereik",
   "Time Change": "Tijd wijzigen",
