--- a/locales/es/translation.json
+++ b/locales/es/translation.json
@@ -122,7 +122,7 @@
   "Parameter": "Ajuste",
   "Parameters History": "Historial de ajustes",
   "Physical Activity": "Actividad física",
-  "Please choose a preferred site change source from the 'Basics' web view to view this data.": "Elija la fuente de cambio de sitio que prefiera desde la vista web \"Básica\" para visualizar estos datos.",
+  "select-view-to-see-data": "Elija la fuente de cambio de sitio que prefiera desde la vista web \"Básica\" para visualizar estos datos.",
   "Post_submit": "Posterior",
   "Prescribed by Loop Mode": "Modo loop",
   "Printed on: ": "Impreso el: ",
@@ -154,8 +154,7 @@
   "Th_Thursday": "J",
   "The Basics": "Información general",
   "There is no {{displayType}} data for this time period :(": "No hay datos de {{displayType}} para este periodo de tiempo :(",
-  "This section requires data from a blood-glucose meter, so there's nothing to display.": "¡No hay nada que mostrar!",
-  "This section requires data from an insulin pump, so there's nothing to display.": "¡No hay nada que mostrar!",
+  "nothing-to-display": "¡No hay nada que mostrar!",
   "Time Above Range": "Tiempo superior al interv. ideal",
   "Time Below Range": "Tiempo inferior al interv. ideal",
   "Time Change": "Cambio de hora",
