--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -122,7 +122,7 @@
   "Parameter": "Paramètre",
   "Parameters History": "Historique des paramètres",
   "Physical Activity": "Activité Physique",
-  "Please choose a preferred site change source from the 'Basics' web view to view this data.": "Merci de choisir un changement de site préféré dans la vue \"Synthèse\" pour afficher ces données.",
+  "select-view-to-see-data": "Merci de choisir un changement de site préféré dans la vue \"Synthèse\" pour afficher ces données.",
   "Post_submit": "Publier",
   "Prescribed by Loop Mode": "Loop mode",
   "Printed on: ": "Imprimé le :",
@@ -154,8 +154,7 @@
   "Th_Thursday": "J",
   "The Basics": "Aperçu",
   "There is no {{displayType}} data for this time period :(": "Il n'y a pas de données {{displayType}} pour cette période : (",
-  "This section requires data from a blood-glucose meter, so there's nothing to display.": "Rien à afficher pour le moment !",
-  "This section requires data from an insulin pump, so there's nothing to display.": "Rien à afficher pour le moment !",
+  "nothing-to-display": "Rien à afficher pour le moment !",
   "Time Above Range": "Temps au dessus de la cible",
   "Time Below Range": "Temps en dessous de la cible",
   "Time Change": "Changement d'heure",
