--- a/locales/it/translation.json
+++ b/locales/it/translation.json
@@ -122,7 +122,7 @@
   "Parameter": "Impostazione",
   "Parameters History": "Storico impostazioni",
   "Physical Activity": "Attività fisica",
-  "Please choose a preferred site change source from the 'Basics' web view to view this data.": "Per visualizzare questi dati, scegli dalla visualizzazione web “Basics” una fonte preferita di cambiamento del sito.",
+  "select-view-to-see-data": "Per visualizzare questi dati, scegli dalla visualizzazione web “Basics” una fonte preferita di cambiamento del sito.",
   "Post_submit": "Pubblica",
   "Prescribed by Loop Mode": "Modalità loop",
   "Printed on: ": "Stampato il: ",
@@ -154,8 +154,7 @@
   "Th_Thursday": "Gi",
   "The Basics": "Panoramica",
   "There is no {{displayType}} data for this time period :(": "Nessun dato {{displayType}} per questo periodo di tempo :(",
-  "This section requires data from a blood-glucose meter, so there's nothing to display.": "Niente da visualizzare!",
-  "This section requires data from an insulin pump, so there's nothing to display.": "Niente da visualizzare!",
+  "nothing-to-display": "Niente da visualizzare!",
   "Time Above Range": "Tempo sopra l’intervallo",
   "Time Below Range": "Tempo sotto l’intervallo",
   "Time Change": "Modifica dell’ora",
